refactor contact form to add textarea to enable leaving messages

--- a/index.html
+++ b/index.html
@@ -415,6 +415,7 @@
             <input type="text" placeholder="NOMBRE *" required />
             <input type="email" placeholder="CORREO *" required />
             <input type="tel" placeholder="TELEFONO" />
+            <textarea type="text" placeholder="MENSAJE *" required></textarea>
             <button type="submit">ENVIAR</button>
           </form>
         </div>
